--- a/pytorch-frontend/public/index.html
+++ b/pytorch-frontend/public/index.html
@@ -14,15 +14,16 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="Toxic Comment Classification" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="Toxic Comment Classification" />
+    <meta property="og:description" content="Toxic Comment Classification" />
+    <link rel="canonical" href="https://toxicity.yoongkang.com" />
+    <meta property="og:url" content="https://toxicity.yoongkang.com" />
+    <meta property="og:site_name" content="Yoong Kang Lim | Toxic Comment Classification" />
+    <meta name="twitter:site" content="@" />
+
     <title>Toxic Comment Classification</title>
   </head>
   <body>
